# chat-app-fastapi

./: Dockerfile  README.md  main.py  pyproject.toml
apps/chats/: models.py  repository.py
apps/messages/: models.py  repository.py  services.py
apps/users/: models.py  queries.py  repository.py
core/: connections_manager.py  deps.py  endpoints.py  models.py  mongo_client.py  postgres_client.py  settings.py
